--- a/style/style.css
+++ b/style/style.css
@@ -2,6 +2,10 @@
 @import "./variables.css";
 @import "./svg.css";
 
+* {
+  box-sizing: border-box;
+}
+
 html {
   -webkit-font-smoothing: antialiased;
   text-shadow: 1px 1px 1px rgba(0,0,0,.004);
@@ -9,10 +13,28 @@ html {
 }
 
 main {
-  width: 50vw;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 90vw;
   margin: 0 auto;
+}
+
+h1 {
+  text-align: center;
 }
 
 h2 {
   text-align: center;
+}
+
+@media (max-width: 1024px) {
+  main {
+  display: flex;
+  }
+}
+
+@media (max-width: 700px) {
+  main {
+  }
 }
