Winkel sind eigenartig

--- a/style/svg.css
+++ b/style/svg.css
@@ -2,8 +2,8 @@
 svg {
   background: #fff;
   display: block;
-  width: 20%;
-  height: 20%;
+  width: 40%;
+  height: 40%;
   padding: 1vw;
   margin: 1vh 0;
 }
@@ -15,12 +15,12 @@ line {
 
 path {
   stroke: #000;
-  fill: #333;
+  fill: green;
   opacity: 0.5;
 }
 
 circle {
-  fill: white;
+  fill: green;
 }
 
 text {
