--- a/style/svg.css
+++ b/style/svg.css
@@ -2,26 +2,22 @@
 svg {
   background: #eee;
   display: block;
-  width: 40%;
-  height: 40%;
+  width: 30%;
+  height: 30%;
   padding: 1vw;
   margin: 1vh 0;
 }
 
 line {
   stroke: grey;
-  transform-origin: 0% 0%;
+  stroke-width: 0.5px;
 }
 
 path {
-  stroke: #000;
+  stroke: blue;
   stroke-width: 0.5px;
-  fill: green;
+  fill: lightblue;
   opacity: 0.5;
-}
-
-circle {
-  fill: green;
 }
 
 text {
