--- a/style/svg.css
+++ b/style/svg.css
@@ -1,11 +1,16 @@
 /* Hier kommen alle Styles rein die sich auf SVG beziehen */
 svg {
-  background: #eee;
+  background: #ccc;
   display: block;
-  width: 30%;
-  height: 30%;
+  width: 100%;
+  height: 100%;
   padding: 1vw;
-  margin: 1vh 0;
+  font-size: var(--svg-font-size);
+/*  margin: 1vh 0;
+*/}
+
+.main svg {
+  font-size: calc(var(--svg-font-size) / 2);
 }
 
 line {
@@ -23,19 +28,15 @@ path {
 text {
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
   font-weight: 300;
-  font-size: var(--svg-font-size);
-  fill: white;
+  fill: var(--font-color);
 }
 
+/* Media Query für Tablets*/
 @media (max-width: 1024px) {
-  svg {
-    width: 33%;
-  }
+  
 }
 
 /* Media Query für Smartphones */
-@media (max-width: 700px) {
-  svg {
-    width: 100%;
-  }
+@media (max-width: 768px) {
+
 }
