starplots heben sich vom hintergrund ab

--- a/style/style.css
+++ b/style/style.css
@@ -7,6 +7,7 @@
 }
 
 html {
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
   background: #fff;
   -webkit-font-smoothing: antialiased;
   text-shadow: 1px 1px 1px rgba(0,0,0,.004);
@@ -34,32 +35,49 @@ main {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-/*  justify-content: flex-end;
-*/  width: 70vw;
-  height: 50vw;
+  width: 70vw;
+  height: 40vw;
   margin: 0 auto;
   margin-top: 6em;
 }
 
 main div:first-child {
-  width: 50%;
+  font-size: 1.5em;
+  width: 35vw;
+  height: 35vw;
 }
 
 .plot {
   position: relative;
-  width: 25%;
+  width: 17.5vw;
+  height: 17.5vw;
+  padding: 1vw;
 }
 
 .plot p {
-  margin: 0;
+  margin:.5vw;
   width: 90%;
   position: absolute;
 }
 
+/* Media Query für Tablets*/
 @media (max-width: 1024px) {
   main {
     width: 100vw;
-    height: 70vw;
+    height: 50vw;
+  }
+
+  main div:first-child {
+    width: 50vw;
+    height: 50vw;
+  }
+
+  .plot {
+    position: relative;
+    width: 25vw;
+    height: 25vw;
+  /*  border-bottom: 1px solid green;
+    border-right: 1px solid green;*/
   }
 }
 
