--- a/style/variables.css
+++ b/style/variables.css
@@ -3,4 +3,8 @@
 :root {
   --font-color: #444;
   --svg-font-size: .5em;
+  --blue: #39AADE;
+  --green: #78D15E;
+  --yellow: #F0E864;
+  --red: #DB4038;
 }
