--- a/style/svg.css
+++ b/style/svg.css
@@ -7,9 +7,8 @@ svg {
   height: 100%;
   padding: 1vw;
   font-size: var(--svg-font-size);
-  box-shadow: 2px 2px 4px #AAAAAA99;
-/*  margin: 1vh 0;
-*/}
+  box-shadow: 0px 2px #aaa;
+}
 
 .main svg {
   font-size: calc(var(--svg-font-size) / 2);
@@ -38,6 +37,8 @@ text {
 }
 
 /* Media Query für Smartphones */
-@media (max-width: 768px) {
-
+@media (max-width: 760px) {
+  svg {
+    padding-top: 3vh;
+  }
 }
