--- a/style/svg.css
+++ b/style/svg.css
@@ -1,6 +1,6 @@
 /* Hier kommen alle Styles rein die sich auf SVG beziehen */
 svg {
-  /*background: radial-gradient(#fff, #ddd);*/
+  background: radial-gradient(#fff, #ddd);
   border-radius: 2px;
   display: block;
   width: 100%;
