Header geändert, Footer hinzugefügt mit provisorischem Nutzermenu, Hilfe Fenster zum Test eingebaut

--- a/style/style.css
+++ b/style/style.css
@@ -24,7 +24,33 @@ header {
   border-bottom: 1px solid #aaa;
   box-shadow: 2px 2px 4px #AAAAAA99;
   z-index: 10;
+  display:flex;
+  justify-content:center;
 }
+
+footer {
+  width: 100vw;
+  background: #fff;
+  bottom: 0;
+  position:fixed;
+  height:6em;
+  border-top: 1px solid #aaa;
+  box-shadow: 2px 2px 4px 4px #AAAAAA99;
+  display:flex;
+  justify-content:center;
+}
+
+input,select {
+  height: 20px;
+  margin: 0 5%;
+}
+
+label {
+  margin: 0 5%;
+  width: 10%;
+
+}
+
 
 h1 {
   font-weight: lighter;
