--- a/style/svg.css
+++ b/style/svg.css
@@ -5,9 +5,12 @@ svg {
   display: block;
   width: 100%;
   height: 100%;
-  padding: 1vw;
   font-size: var(--svg-font-size);
   /*box-shadow: 0px 2px #aaa;*/
+}
+
+text {
+  font-size: 30px;
 }
 
 .main svg {
@@ -16,7 +19,7 @@ svg {
 
 line {
   stroke: grey;
-  stroke-width: .5px;
+  stroke-width: var(--stroke);
 }
 
 circle {
@@ -25,7 +28,7 @@ circle {
 
 path {
   stroke: gray(200, 50%);
-  stroke-width: .5px;
+  stroke-width: var(--stroke);
   fill: transparent;
 }
 
@@ -33,21 +36,22 @@ path {
   fill: transparent;
 }
 
-.small-plots .data-set-1 {
+.small-plots .data-set-0 {
+  stroke: grey;
   fill: grey;
 }
 
-.data-set-1, .blue {
+.data-set-0, .blue {
   stroke: var(--blue);
   fill: color(var(--blue) a(50%));
 }
 
-.data-set-2, .green {
+.data-set-1, .green {
   stroke: var(--green);
   fill: color(var(--green) a(50%));
 }
 
-.data-set-3, .red {
+.data-set-2, .red {
   stroke: var(--red);
   fill: color(var(--red) a(50%));
 }
