--- a/style/svg.css
+++ b/style/svg.css
@@ -1,80 +1,53 @@
-/* Hier kommen alle Styles rein die sich auf SVG beziehen */
 svg {
   background: var(--light-grey);
-  border-radius: 2px;
-  display: block;
-  width: 100%;
-  height: 100%;
-  font-size: var(--svg-font-size);
-  /*box-shadow: 0px 2px #aaa;*/
 }
 
 text {
-  font-size: 13px;
+  font-size: var(--svg-font-size);
 }
 
-.main svg {
-  font-size: calc(var(--svg-font-size) / 2);
-}
-
-line {
-  stroke: grey;
-  stroke-width: var(--stroke);
-}
-
-circle {
-  fill: grey;
-}
-
-path {
-  stroke: var(--grey);
-  stroke-width: var(--stroke);
-  fill: transparent;
-}
-
-.small-plots .active svg path {
-  fill: var(--blue);
-  stroke: var(--blue);
+.axes {
+  stroke: var(--dark-grey);
 }
 
 .scale {
   fill: transparent;
+  stroke: var(--grey);
 }
 
-.small-plots .data-set-0 {
-  stroke: var(--dark-grey);
-  fill: var(--dark-grey);
+.star-plot {
+  border: 2px solid white;
 }
 
-.data-set-0 {
-  stroke: var(--blue);
-  stroke-width: var(--stroke-polygon);
-  fill: color(var(--blue) a(50%));
-}
-
-.data-set-1 {
-  stroke: var(--green);
-  fill: color(var(--green) a(50%));
-}
-
-.data-set-2 {
+.data-set-0,
+.active-0 {
+  fill: color(var(--red) a(70%));
   stroke: var(--red);
-  fill: color(var(--red) a(50%));
 }
 
-text {
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
-  fill: var(--font-color);
+.data-set-1,
+.active-1 {
+  fill: color(var(--blue) a(70%));
+  stroke: var(--blue);
 }
 
-/* Media Query für Tablets*/
-@media (max-width: 1024px) {
-  
+.data-set-2,
+.active-2 {
+  fill: color(var(--green) a(70%));
+  stroke: var(--green);
 }
 
-/* Media Query für Smartphones */
-@media (max-width: 760px) {
-  svg {
-    padding-top: 3vh;
-  }
+.small-plots {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.small-plots .star-plot {
+  height: calc(100% / 3);
+  width: calc(100% / 3);
+}
+
+.small-plots path {
+  fill: var(--dark-grey);
+  stroke: var(--dark-grey);
 }
