--- a/style/variables.css
+++ b/style/variables.css
@@ -2,7 +2,10 @@
 
 :root {
   --font-color: gray(35%);
-  --svg-font-size: .5em;
+  --svg-font-size: .8em;
+
+  --space: 1vh;
+  --padding-lr: 0 var(--space) 0 var(--space);
 
   --light-grey: gray(95%);
   --grey: gray(80%);
@@ -13,4 +16,16 @@
   --red: #DB4038;
   --stroke: 1px;
   --stroke-polygon: 2px;
+}
+
+@font-face {
+    font-family: 'Gidole Regular';
+    src: url('font/gidole-regular-webfont.eot');
+    src: url('font/gidole-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('font/gidole-regular-webfont.woff2') format('woff2'),
+         url('font/gidole-regular-webfont.woff') format('woff'),
+         url('font/gidole-regular-webfont.ttf') format('truetype'),
+         url('font/gidole-regular-webfont.svg#gidoleregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
