--- a/style/svg.css
+++ b/style/svg.css
@@ -11,8 +11,8 @@ text {
 }
 
 .scale {
-  fill: transparent;
-  stroke: var(--grey);
+  fill: transparent !important;
+  stroke: var(--grey) !important;
 }
 
 .star-plot {
