--- a/style/svg.css
+++ b/style/svg.css
@@ -19,20 +19,25 @@ text {
   border: 2px solid white;
 }
 
-.data-set-0,
-.active-0 {
+.data-set {
+  fill: color(var(--dark-grey) a(50%));
+  stroke: var(--dark-grey);
+}
+
+.data-set:nth-of-type(1),
+.active:nth-of-type(1) > svg .data-set-0 {
   fill: color(var(--red) a(70%));
   stroke: var(--red);
 }
 
-.data-set-1,
-.active-1 {
+.data-set:nth-of-type(2),
+.active:nth-of-type(2) > svg .data-set-0 {
   fill: color(var(--blue) a(70%));
   stroke: var(--blue);
 }
 
-.data-set-2,
-.active-2 {
+.data-set:nth-of-type(3),
+.active:nth-of-type(3) > svg .data-set-0 {
   fill: color(var(--green) a(70%));
   stroke: var(--green);
 }
@@ -45,6 +50,10 @@ text {
 .small-plots .star-plot {
   height: calc(100% / 3);
   width: calc(100% / 3);
+}
+
+.small-plots .star-plot:hover {
+  cursor: pointer;
 }
 
 .small-plots path {
