--- a/style/svg.css
+++ b/style/svg.css
@@ -25,18 +25,18 @@ text {
   stroke: var(--dark-grey);
 }
 
-.data-set:nth-of-type(1) {
-  fill: color(var(--red) a(70%));
+.active-0 svg path {
+  fill: var(--red);
   stroke: var(--red);
 }
 
-.data-set:nth-of-type(2) {
-  fill: color(var(--blue) a(70%));
+.active-1 svg path {
+  fill: var(--blue);
   stroke: var(--blue);
 }
 
-.data-set:nth-of-type(3) {
-  fill: color(var(--green) a(70%));
+.active-2 svg path {
+  fill: var(--green);
   stroke: var(--green);
 }
 
@@ -51,8 +51,9 @@ text {
   width: calc(100% / 3);
 }
 
-.small-plots .star-plot:hover {
+.small-plots .star-plot:hover svg{
   cursor: pointer;
+  background: color(var(--light-grey) l(90%));
 }
 
 .small-plots path {
