--- a/style/svg.css
+++ b/style/svg.css
@@ -26,24 +26,24 @@ text {
   border: 2px solid white;
 }
 
-.data-set {
-  fill: color(var(--dark-grey) a(50%));
+.small-plots svg path {
+  fill: var(--dark-grey);
   stroke: var(--dark-grey);
 }
 
-.active svg path {
-  fill: var(--red);
-  stroke: var(--red);
+.active-0 {
+  fill: var(--red) !important;
+  stroke: var(--red) !important;
 }
 
-.active-1 svg path {
-  fill: var(--blue);
-  stroke: var(--blue);
+.active-1 {
+  fill: var(--blue) !important;
+  stroke: var(--blue) !important;
 }
 
-.active-2 svg path {
-  fill: var(--green);
-  stroke: var(--green);
+.active-2 {
+  fill: var(--green) !important;
+  stroke: var(--green) !important;
 }
 
 .small-plots {
@@ -60,9 +60,4 @@ text {
 .small-plots .star-plot:hover svg{
   cursor: pointer;
   background: color(var(--light-grey) l(90%));
-}
-
-.small-plots path {
-  fill: var(--dark-grey);
-  stroke: var(--dark-grey);
 }
