--- a/style/style.css
+++ b/style/style.css
@@ -32,17 +32,50 @@ header {
   z-index: 100;
 }
 
+header p {
+  display: none;
+}
+
+header.expanded p {
+  display: block;
+  margin: calc(var(--space) * 2);
+  color: var(--blue);
+  border-bottom: 1px solid var(--grey);
+}
+
 header.expanded {
   height: 50vh;
 }
 
 header.expanded ul {
   display: block;
+  height: 80%;
+  max-width: 18vw;
+  overflow-y: scroll;
 }
 
 .wrap {
   display: flex;
+  height: 100%;
   justify-content: center;
+}
+
+header div {
+  height: 100%;
+}
+
+#search-results {
+  height: 80%;
+  width: 20vw;
+  overflow-y: scroll;
+}
+
+#search-results button {
+  color: var(--font-color);
+}
+
+#search-results button:hover {
+  color: var(--red);
 }
 
 header ul {
@@ -71,6 +104,7 @@ header button {
   background: none;
   color: var(--red);
   padding: var(--padding-lr);
+  text-align: left;
 }
 
 input,
@@ -81,7 +115,11 @@ select {
   padding: var(--padding-lr);
   overflow: hidden;
   text-overflow: ellipsis;
-  -webkit-appearance: none;
+  /*-webkit-appearance: none;*/
+}
+
+select:hover {
+  cursor: pointer;
 }
 
 ul {
@@ -91,6 +129,7 @@ ul {
 
 li {
   border-bottom: 1px solid var(--grey);
+  padding: var(--space) 0;
 }
 
 /*
@@ -103,8 +142,8 @@ main {
 }
 
 main div {
-  height: 70vh;
-  width: 70vh;
+  height: 50vw;
+  width: 50vw;
 }
 
 .plot,
@@ -138,8 +177,3 @@ footer img {
   display: inline-block;
   vertical-align: middle;
 }
-
-
-
-
-
