--- a/style/style.css
+++ b/style/style.css
@@ -39,7 +39,7 @@ header p {
 header.expanded p {
   display: block;
   margin: calc(var(--space) * 2);
-  color: var(--blue);
+  color: color(var(--blue) l(30%));
   border-bottom: 1px solid var(--grey);
 }
 
@@ -139,11 +139,14 @@ li {
 main {
   display: flex;
   justify-content: center;
+  min-width: 1024px;
+  max-width: 80vw;
+  margin: 0 auto;
 }
 
-main div {
-  height: 50vw;
-  width: 50vw;
+.plot, .small-plots {
+  height: 50%;
+  width: 50%;
 }
 
 .plot,
