--- a/style/svg.css
+++ b/style/svg.css
@@ -25,7 +25,7 @@ text {
 }
 
 .plot .star-plot .data-set-0 {
-  fill-opacity: 0.5;
+  fill-opacity: 0.7;
   fill: var(--red);
 
 }
@@ -74,6 +74,7 @@ text {
 }
 
 .small-plots .star-plot {
+  display: inline-block;
   height: calc(100% / 3);
   width: calc(100% / 3);
 }
