--- a/style/details.css
+++ b/style/details.css
@@ -2,10 +2,13 @@
   display: none;
   background: white;
   position: absolute;
+  height: 100%;
+  width: 100%;
   top: 0;
   left: 0;
   padding: 0 calc(var(--space) * 3) 0 calc(var(--space) * 3);
   z-index: 1;
+  overflow: scroll;
 }
 
 .details h2 {
